test/org/midica/testfiles/failing/include-too-many-args.midica
INCLUDE inc/instruments.midica  inc/instruments.midica

0 c /4
0 d /4
*
1 c /4
